--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 	</head>
-	<body>
-		<nav><!-- navigation bar -->
+	<body class="landing">
+		<nav class="navbar"><!-- navigation bar -->
+			<img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
 		</nav>
-		<section><!-- hero content -->
-			<h1>Bloc Jams</h1>
-			<h3>Turn the music up!</h3>
+		<section class="hero-content"><!-- hero content -->
+			<h1 class="hero-title">Turn the music up!</h1>
 		</section>
 		<section><!-- selling points -->
 		  <div>
